--- a/home.html
+++ b/home.html
@@ -474,14 +474,8 @@
                         <td>TCG, Vantaa</td>
                         <td>
                             <p>
-                                <!-- <a class="btn btn-primary" 
-                                href="#collapseRow6" 
-                                role="button" 
-                                aria-expanded="false" 
-                                >
-                                  View Result
-                                </a> -->
-                              </p>
+                                Date to be announced!
+                            </p>
                         </td>
                       </tr>
 
@@ -495,14 +489,8 @@
                         <td>TCG, Vantaa</td>
                         <td>
                             <p>
-                                <!-- <a class="btn btn-primary" 
-                                href="#collapseRow7" 
-                                role="button" 
-                                aria-expanded="false" 
-                                >
-                                  View Result
-                                </a> -->
-                              </p>
+                                Date to be announced!
+                            </p>
                         </td>
                       </tr>
 
@@ -609,7 +597,7 @@
                               </p>
                         </td>
                       </tr>
-                      <tr class="table-danger">
+                      <tr class="table-success">
                         <td>T20</td>
                         <td>E</td>
                         <td>Sunday</td>
@@ -630,7 +618,7 @@
                               </p>
                         </td>
                       </tr>
-                      <tr class="table-danger">
+                      <tr class="table-success">
                         <td>T20</td>
                         <td>E</td>
                         <td>Sunday</td>
