--- a/home.html
+++ b/home.html
@@ -431,7 +431,7 @@
                         <td>23.05.2021</td>
                         <td>14:00 - 15:30</td>
                         <td>TUC vs EMP</td>
-                        <td>TCG, Vantaa</td>
+                        <td>Kupittaa, Turku</td>
                         <td>
                             <p>
                                 <a class="btn btn-primary" 
@@ -451,7 +451,7 @@
                         <td>23.05.2021</td>
                         <td>16:00 - 17:30</td>
                         <td>TUC vs BEN</td>
-                        <td>TCG, Vantaa</td>
+                        <td>Kupittaa, Turku</td>
                         <td>
                             <p>
                                 <a class="btn btn-primary" 
@@ -604,7 +604,7 @@
                         <td>20.06.2021</td>
                         <td>10:30 - 13:30</td>
                         <td>TUC vs GHM</td>
-                        <td>TCG</td>
+                        <td>TCG, Vantaa</td>
                         <td>
                             <p>
                                 <!-- <a class="btn btn-primary" 
@@ -625,7 +625,7 @@
                         <td>20.06.2021</td>
                         <td>14:30 - 17:30</td>
                         <td>TUC vs VAN</td>
-                        <td>TCG</td>
+                        <td>TCG, Vantaa</td>
                         <td>
                             <p>
                                 <!-- <a class="btn btn-primary" 
@@ -655,7 +655,7 @@
                         <a href="#"><img src="assets/img/brands/1.png" alt=""></a>
                     </div>
                 </div>
-                <div class="brand-item">
+                <!-- <div class="brand-item">
                     <div class="brand-item-inner">
                         <a href="#"><img src="assets/img/brands/1.png" alt=""></a>
                     </div>
@@ -679,7 +679,7 @@
                     <div class="brand-item-inner">
                         <a href="#"><img src="assets/img/brands/1.png" alt=""></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
